--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://volta007.github.io/Main-Project-01/",
   "name": "main-project-01",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
